// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders C# version of S3457 (using GH for issues instead of Jira) 1`] = `
<DocumentFragment>
  <div>
    <div
      class="makeStyles-ruleBar-24"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg"
      >
        <h2
          class="MuiTypography-root makeStyles-ruleid-25 MuiTypography-h2"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineNone makeStyles-ruleidLink-26  MuiTypography-colorPrimary"
            href="/S3457"
          >
            S3457
          </a>
        </h2>
        <h4
          class="MuiTypography-root makeStyles-ruleid-25 MuiTypography-h4"
        />
        <div
          class="MuiTabs-root makeStyles-tabRoot-31"
        >
          <div
            class="MuiTabs-scrollable"
            style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
          />
          <div
            class="MuiTabs-scroller makeStyles-tabScroller-32 MuiTabs-scrollable"
            style="margin-bottom: 0px;"
          >
            <div
              class="MuiTabs-flexContainer"
              role="tablist"
            >
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-34 makeStyles-targetedTab-36"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  cfamily
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-34 makeStyles-coveredTab-35 Mui-selected"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  csharp
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-34 makeStyles-closedTab-38"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  java
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-34 makeStyles-targetedTab-36"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  python
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="PrivateTabIndicator-root-43 PrivateTabIndicator-colorPrimary-44 MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd"
    >
      <h1>
        Composite format strings should be used correctly
      </h1>
      <hr />
      <div
        class="MuiBox-root MuiBox-root-40 makeStyles-coverage-29"
      >
        <h2>
          Covered Since
        </h2>
        <ul>
          <li>
            CSH: c#1
          </li>
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-41 makeStyles-coverage-29"
      >
        <h2>
          Related Tickets and Pull Requests
        </h2>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://github.com/SonarSource/rspec/pulls?q=is%3Apr+\\"S3457\\"+OR+\\"RSPEC-3457\\""
          >
            Specification Pull Requests
          </a>
        </ul>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://github.com/SonarSource/sonar-dotnet/pulls?q=is%3Apr+\\"S3457\\"+OR+\\"RSPEC-3457\\""
          >
            Implementation Pull Requests
          </a>
        </ul>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://github.com/SonarSource/sonar-dotnet/issues?q=is%3Aissue+\\"S3457\\"+OR+\\"RSPEC-3457\\""
          >
            Implementation issues on GitHub
          </a>
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-42"
      >
        <span
          class="MuiTypography-root makeStyles-description-30 MuiTypography-body1"
        >
          <div>
            <div
              class="sect1"
            >
              

              <h2
                id="_description"
              >
                Description
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    Because composite format strings are interpreted at runtime, rather than validated by the compiler, they can contain errors that lead to unexpected behaviors or runtime errors. This rule statically validates the good behavior of composite formats when calling the methods of 
                    <code>
                      String.Format
                    </code>
                    , 
                    <code>
                      StringBuilder.AppendFormat
                    </code>
                    , 
                    <code>
                      Console.Write
                    </code>
                    , 
                    <code>
                      Console.WriteLine
                    </code>
                    , 
                    <code>
                      TextWriter.Write
                    </code>
                    , 
                    <code>
                      TextWriter.WriteLine
                    </code>
                    , 
                    <code>
                      Debug.WriteLine(String, Object[])
                    </code>
                    , 
                    <code>
                      Trace.TraceError(String, Object[])
                    </code>
                    , 
                    <code>
                      Trace.TraceInformation(String, Object[])
                    </code>
                    , 
                    <code>
                      Trace.TraceWarning(String, Object[])
                    </code>
                     and 
                    <code>
                      TraceSource.TraceInformation(String, Object[])
                    </code>
                    .
                  </p>
                  

                </div>
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_noncompliant_code_example"
              >
                Noncompliant Code Example
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="listingblock"
                >
                  

                  <div
                    class="content"
                  >
                    

                    <pre
                      class="highlight"
                    >
                      <pre>
                        <code
                          class="cs hljs csharp"
                        >
                          s = 
                          <span
                            class="hljs-built_in"
                          >
                            string
                          </span>
                          .Format(
                          <span
                            class="hljs-string"
                          >
                            "{0}"
                          </span>
                          , arg0, arg1); 
                          <span
                            class="hljs-comment"
                          >
                            // Noncompliant, arg1 is declared but not used.
                          </span>
                          
s = 
                          <span
                            class="hljs-built_in"
                          >
                            string
                          </span>
                          .Format(
                          <span
                            class="hljs-string"
                          >
                            "{0} {2}"
                          </span>
                          , arg0, arg1, arg2); 
                          <span
                            class="hljs-comment"
                          >
                            // Noncompliant, the format item with index 1 is missing so arg1 will not be used.
                          </span>
                          
s = 
                          <span
                            class="hljs-built_in"
                          >
                            string
                          </span>
                          .Format(
                          <span
                            class="hljs-string"
                          >
                            "foo"
                          </span>
                          ); 
                          <span
                            class="hljs-comment"
                          >
                            // Noncompliant, there is no need to use string.Format here.
                          </span>
                        </code>
                      </pre>
                    </pre>
                    

                  </div>
                  

                </div>
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_compliant_solution"
              >
                Compliant Solution
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="listingblock"
                >
                  

                  <div
                    class="content"
                  >
                    

                    <pre
                      class="highlight"
                    >
                      <pre>
                        <code
                          class="cs hljs csharp"
                        >
                          s = 
                          <span
                            class="hljs-built_in"
                          >
                            string
                          </span>
                          .Format(
                          <span
                            class="hljs-string"
                          >
                            "{0}"
                          </span>
                          , arg0);
s = 
                          <span
                            class="hljs-built_in"
                          >
                            string
                          </span>
                          .Format(
                          <span
                            class="hljs-string"
                          >
                            "{0} {1}"
                          </span>
                          , arg0, arg2);
s = 
                          <span
                            class="hljs-string"
                          >
                            "foo"
                          </span>
                          ;
                        </code>
                      </pre>
                    </pre>
                    

                  </div>
                  

                </div>
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_exceptions"
              >
                Exceptions
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="ulist"
                >
                  

                  <ul>
                    

                    <li>
                      

                      <p>
                        No issue is raised if the format string is not a 
                        <code>
                          const
                        </code>
                        .
                      </p>
                      

                    </li>
                    

                  </ul>
                  

                </div>
                

                <div
                  class="listingblock"
                >
                  

                  <div
                    class="content"
                  >
                    

                    <pre>
                      var pattern = "{0} {1} {2}";
var res = string.Format(pattern, 1, 2); // Compliant, not const string are not recognized
                    </pre>
                    

                  </div>
                  

                </div>
                

                <div
                  class="ulist"
                >
                  

                  <ul>
                    

                    <li>
                      

                      <p>
                        No issue is raised if the argument is not an inline creation array.
                      </p>
                      

                    </li>
                    

                  </ul>
                  

                </div>
                

                <div
                  class="listingblock"
                >
                  

                  <div
                    class="content"
                  >
                    

                    <pre>
                      var array = new int[] {};
var res = string.Format("{0} {1}", array); // Compliant we don't know the size of the array
                    </pre>
                    

                  </div>
                  

                </div>
                

                <div
                  class="ulist"
                >
                  

                  <ul>
                    

                    <li>
                      

                      <p>
                        This rule doesn’t check whether the format specifier (defined after the 
                        <code>
                          :
                        </code>
                        ) is actually valid.
                      </p>
                      

                    </li>
                    

                  </ul>
                  

                </div>
                

                <hr />
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_implementation_specification"
              >
                Implementation Specification
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    (visible only on this page)
                  </p>
                  

                </div>
                

                <div
                  class="sect2"
                >
                  

                  <h3
                    id="_message"
                  >
                    Message
                  </h3>
                  

                  <div
                    class="paragraph"
                  >
                    

                    <p>
                      XXXX
                    </p>
                    

                  </div>
                  

                  <hr />
                  

                </div>
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_comments_and_links"
              >
                Comments And Links
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    (visible only on this page)
                  </p>
                  

                </div>
                

                <div
                  class="sect2"
                >
                  

                  <h3
                    id="_is_duplicated_by_s3941"
                  >
                    is duplicated by: 
                    <a
                      class="rspec-auto-link"
                      data-rspec-id="S3941"
                      href="/rspec#/rspec/S3941"
                    >
                      S3941
                    </a>
                  </h3>
                  


                </div>
                

                <div
                  class="sect2"
                >
                  

                  <h3
                    id="_is_related_to_s2275"
                  >
                    is related to: 
                    <a
                      class="rspec-auto-link"
                      data-rspec-id="S2275"
                      href="/rspec#/rspec/S2275"
                    >
                      S2275
                    </a>
                  </h3>
                  


                </div>
                

                <div
                  class="sect2"
                >
                  

                  <h3
                    id="_on_10_dec_2015_090759_tamas_vajk_wrote"
                  >
                    on 10 Dec 2015, 09:07:59 Tamas Vajk wrote:
                  </h3>
                  

                  <div
                    class="paragraph"
                  >
                    

                    <p>
                      \\[~ann.campbell.2] Removed the performance label, as the performance impact is insignificant.
                    </p>
                    

                  </div>
                  

                </div>
                

                <div
                  class="sect2"
                >
                  

                  <h3
                    id="_on_10_dec_2015_144405_ann_campbell_wrote"
                  >
                    on 10 Dec 2015, 14:44:05 Ann Campbell wrote:
                  </h3>
                  

                  <div
                    class="paragraph"
                  >
                    

                    <p>
                      I’ve updated SQALE characteristic to match [~tamas.vajk]
                    </p>
                    

                  </div>
                  

                </div>
                

              </div>
              

            </div>
            <hr />
            <a
              href="https://github.com/SonarSource/rspec/blob/master/rules/S3457/csharp"
            >
              Edit on Github
            </a>
            <br />
            <hr />
            <pre>
              <code
                class="json hljs"
              >
                {
  
                <span
                  class="hljs-attr"
                >
                  "title"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "Composite format strings should be used correctly"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "type"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "CODE_SMELL"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "ready"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "remediation"
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  "func"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "Constant/Issue"
                </span>
                ,
    
                <span
                  class="hljs-attr"
                >
                  "constantCost"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "10min"
                </span>
                
  },
  
                <span
                  class="hljs-attr"
                >
                  "tags"
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  "confusing"
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  "defaultQualityProfiles"
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  "Sonar way"
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  "allKeys"
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  "S3457"
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  "branch"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "master"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "defaultSeverity"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "Major"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "extra"
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  "legacyKeys"
                </span>
                : [],
    
                <span
                  class="hljs-attr"
                >
                  "replacementRules"
                </span>
                : []
  },
  
                <span
                  class="hljs-attr"
                >
                  "quickfix"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "unknown"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "ruleSpecification"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "RSPEC-3457"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "sqKey"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "S3457"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "scope"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "All"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "languagesSupport"
                </span>
                : [
    {
      
                <span
                  class="hljs-attr"
                >
                  "name"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "cfamily"
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "ready"
                </span>
                
    },
    {
      
                <span
                  class="hljs-attr"
                >
                  "name"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "csharp"
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "ready"
                </span>
                
    },
    {
      
                <span
                  class="hljs-attr"
                >
                  "name"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "java"
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "closed"
                </span>
                
    },
    {
      
                <span
                  class="hljs-attr"
                >
                  "name"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "python"
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "deprecated"
                </span>
                
    }
  ]
}
              </code>
            </pre>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders cfamily version of S1000 1`] = `
<DocumentFragment>
  <div>
    <div
      class="makeStyles-ruleBar-1"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg"
      >
        <h2
          class="MuiTypography-root makeStyles-ruleid-2 MuiTypography-h2"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineNone makeStyles-ruleidLink-3  MuiTypography-colorPrimary"
            href="/S1000"
          >
            S1000
          </a>
        </h2>
        <h4
          class="MuiTypography-root makeStyles-ruleid-2 MuiTypography-h4"
        />
        <div
          class="MuiTabs-root makeStyles-tabRoot-8"
        >
          <div
            class="MuiTabs-scrollable"
            style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
          />
          <div
            class="MuiTabs-scroller makeStyles-tabScroller-9 MuiTabs-scrollable"
            style="margin-bottom: 0px;"
          >
            <div
              class="MuiTabs-flexContainer"
              role="tablist"
            >
              <button
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-11 makeStyles-targetedTab-13 Mui-selected"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  cfamily
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="PrivateTabIndicator-root-20 PrivateTabIndicator-colorPrimary-21 MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd"
    >
      <h1>
        Header files should not contain unnamed namespaces
      </h1>
      <hr />
      <div
        class="MuiBox-root MuiBox-root-17 makeStyles-coverage-6"
      >
        <h2>
          Covered Since
        </h2>
        <ul>
          Not Covered
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-18 makeStyles-coverage-6"
      >
        <h2>
          Related Tickets and Pull Requests
        </h2>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://github.com/SonarSource/rspec/pulls?q=is%3Apr+\\"S1000\\"+OR+\\"RSPEC-1000\\""
          >
            Specification Pull Requests
          </a>
        </ul>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://github.com/SonarSource/sonar-cpp/pulls?q=is%3Apr+\\"S1000\\"+OR+\\"RSPEC-1000\\""
          >
            Implementation Pull Requests
          </a>
        </ul>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://jira.sonarsource.com/issues/?jql=project%20%3D%20CPP%20AND%20(text%20~%20%22S1000%22%20OR%20text%20~%20%22RSPEC-1000%22%20OR%20text%20~%20\\"Header files should not contain unnamed namespaces\\")"
          >
            Implementation tickets on Jira
          </a>
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-19"
      >
        <span
          class="MuiTypography-root makeStyles-description-7 MuiTypography-body1"
        >
          <div>
            <div
              class="sect1"
            >
              

              <h2
                id="_description"
              >
                Description
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    An unnamed namespace will be unique within each translation unit. Any declarations appearing in an unnamed namespace in a header will refer to a different entity in each translation unit, which is probably not the expected behavior.
                  </p>
                  

                </div>
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_noncompliant_code_example"
              >
                Noncompliant Code Example
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="listingblock"
                >
                  

                  <div
                    class="content"
                  >
                    

                    <pre
                      class="highlight"
                    >
                      <pre>
                        <code
                          class="cpp hljs"
                        >
                          <span
                            class="hljs-comment"
                          >
                            // Header.hpp
                          </span>
                          

                          <span
                            class="hljs-keyword"
                          >
                            namespace
                          </span>
                                            
                          <span
                            class="hljs-comment"
                          >
                            // Noncompliant
                          </span>
                          
{
  
                          <span
                            class="hljs-keyword"
                          >
                            extern
                          </span>
                           
                          <span
                            class="hljs-keyword"
                          >
                            int32_t
                          </span>
                           x;
}
                        </code>
                      </pre>
                    </pre>
                    

                  </div>
                  

                </div>
                

                <div
                  class="listingblock"
                >
                  

                  <div
                    class="content"
                  >
                    

                    <pre
                      class="highlight"
                    >
                      <pre>
                        <code
                          class="cpp hljs"
                        >
                          <span
                            class="hljs-comment"
                          >
                            // File1.cpp
                          </span>
                          

                          <span
                            class="hljs-meta"
                          >
                            #
                            <span
                              class="hljs-meta-keyword"
                            >
                              include
                            </span>
                             
                            <span
                              class="hljs-meta-string"
                            >
                              "Header.hpp"
                            </span>
                          </span>
                          


                          <span
                            class="hljs-keyword"
                          >
                            namespace
                          </span>
                          
{
  
                          <span
                            class="hljs-keyword"
                          >
                            int32_t
                          </span>
                           x;
}


                          <span
                            class="hljs-function"
                          >
                            <span
                              class="hljs-keyword"
                            >
                              void
                            </span>
                             
                            <span
                              class="hljs-title"
                            >
                              fn_a
                            </span>
                            <span
                              class="hljs-params"
                            >
                              (
                              <span
                                class="hljs-keyword"
                              >
                                void
                              </span>
                              )
                            </span>
                            

                          </span>
                          {
  x = 
                          <span
                            class="hljs-number"
                          >
                            42
                          </span>
                          ;
}
                        </code>
                      </pre>
                    </pre>
                    

                  </div>
                  

                </div>
                

                <div
                  class="listingblock"
                >
                  

                  <div
                    class="content"
                  >
                    

                    <pre
                      class="highlight"
                    >
                      <pre>
                        <code
                          class="cpp hljs"
                        >
                          <span
                            class="hljs-comment"
                          >
                            // File2.cpp
                          </span>
                          

                          <span
                            class="hljs-meta"
                          >
                            #
                            <span
                              class="hljs-meta-keyword"
                            >
                              include
                            </span>
                             
                            <span
                              class="hljs-meta-string"
                            >
                              "Header.hpp"
                            </span>
                          </span>
                          


                          <span
                            class="hljs-keyword"
                          >
                            namespace
                          </span>
                          
{
  
                          <span
                            class="hljs-keyword"
                          >
                            int32_t
                          </span>
                           x;  
                          <span
                            class="hljs-comment"
                          >
                            // this is a different x than in File1.cpp
                          </span>
                          
}


                          <span
                            class="hljs-function"
                          >
                            <span
                              class="hljs-keyword"
                            >
                              void
                            </span>
                             
                            <span
                              class="hljs-title"
                            >
                              fn_b
                            </span>
                            <span
                              class="hljs-params"
                            >
                              (
                              <span
                                class="hljs-keyword"
                              >
                                void
                              </span>
                              )
                            </span>
                            

                          </span>
                          {
  
                          <span
                            class="hljs-built_in"
                          >
                            fn_a
                          </span>
                          ();                  
                          <span
                            class="hljs-comment"
                          >
                            // Is expected to initialize "x" to 42
                          </span>
                          
  
                          <span
                            class="hljs-keyword"
                          >
                            if
                          </span>
                           (x == 
                          <span
                            class="hljs-number"
                          >
                            42
                          </span>
                          )             
                          <span
                            class="hljs-comment"
                          >
                            // But does not, as there are 2 distinct "x" variables
                          </span>
                          
  {
     
                          <span
                            class="hljs-comment"
                          >
                            // I am NOT an auto link in some source code: S987.
                          </span>
                          
  }
}
                        </code>
                      </pre>
                    </pre>
                    

                  </div>
                  

                </div>
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    Mentioning 
                    <a
                      class="rspec-auto-link"
                      data-rspec-id="S987"
                      href="/rspec#/rspec/S987"
                    >
                      S987
                    </a>
                     
                    <a
                      class="rspec-auto-link"
                      data-rspec-id="S987"
                      href="/rspec#/rspec/S987"
                    >
                      RSPEC-987
                    </a>
                     here for testing purposes.
                  </p>
                  

                </div>
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_see"
              >
                See
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="ulist"
                >
                  

                  <ul>
                    

                    <li>
                      

                      <p>
                        MISRA C++:2008, 7-3-3 - There shall be no unnamed namespaces in header files.
                      </p>
                      

                    </li>
                    

                    <li>
                      

                      <p>
                        <a
                          href="https://wiki.sei.cmu.edu/confluence/x/VXs-BQ"
                        >
                          CERT, DCL59-CPP.
                        </a>
                         - Do not define an unnamed namespace in a header file
                      </p>
                      

                    </li>
                    

                  </ul>
                  

                </div>
                

                <hr />
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_comments_and_links"
              >
                Comments And Links
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    (visible only on this page)
                  </p>
                  

                </div>
                

                <div
                  class="sect2"
                >
                  

                  <h3
                    id="_on_8_feb_2018_004304_thomas_epperson_wrote"
                  >
                    on 8 Feb 2018, 00:43:04 Thomas Epperson wrote:
                  </h3>
                  

                  <div
                    class="paragraph"
                  >
                    

                    <p>
                      The implementation incorrectly flags unnamed namespaces in source files. The specs only refer to unnamed namespaces in HEADER files.
                    </p>
                    

                  </div>
                  

                  <div
                    class="paragraph"
                  >
                    

                    <p>
                      See reported bugs in https://sonarcloud.io/dashboard?id=uglyoldbob_decompiler%3Arestructure
                    </p>
                    

                  </div>
                  

                </div>
                

              </div>
              

            </div>
            <hr />
            <a
              href="https://github.com/SonarSource/rspec/blob/master/rules/S1000/cfamily"
            >
              Edit on Github
            </a>
            <br />
            <hr />
            <pre>
              <code
                class="json hljs"
              >
                {
  
                <span
                  class="hljs-attr"
                >
                  "title"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "Header files should not contain unnamed namespaces"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "type"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "CODE_SMELL"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "ready"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "quickfix"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "unknown"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "remediation"
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  "func"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "Constant/Issue"
                </span>
                ,
    
                <span
                  class="hljs-attr"
                >
                  "constantCost"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "1h"
                </span>
                
  },
  
                <span
                  class="hljs-attr"
                >
                  "tags"
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  "cert"
                </span>
                ,
    
                <span
                  class="hljs-string"
                >
                  "misra-c++2008"
                </span>
                ,
    
                <span
                  class="hljs-string"
                >
                  "clumsy"
                </span>
                ,
    
                <span
                  class="hljs-string"
                >
                  "pitfall"
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  "extra"
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  "legacyKeys"
                </span>
                : [
      
                <span
                  class="hljs-string"
                >
                  "UnnamedNamespaceInHeader"
                </span>
                
    ],
    
                <span
                  class="hljs-attr"
                >
                  "replacementRules"
                </span>
                : []
  },
  
                <span
                  class="hljs-attr"
                >
                  "defaultSeverity"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "Major"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "ruleSpecification"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "RSPEC-1000"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "sqKey"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "UnnamedNamespaceInHeader"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "scope"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "Main"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "securityStandards"
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  "CERT"
                </span>
                : [
      
                <span
                  class="hljs-string"
                >
                  "DCL59-CPP."
                </span>
                
    ]
  },
  
                <span
                  class="hljs-attr"
                >
                  "defaultQualityProfiles"
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  "Sonar way"
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  "languagesSupport"
                </span>
                : [
    {
      
                <span
                  class="hljs-attr"
                >
                  "name"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "cfamily"
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "ready"
                </span>
                
    }
  ],
  
                <span
                  class="hljs-attr"
                >
                  "allKeys"
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  "UnnamedNamespaceInHeader"
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  "branch"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "master"
                </span>
                
}
              </code>
            </pre>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders closed rule S1007 1`] = `
<DocumentFragment>
  <div>
    <div
      class="makeStyles-ruleBar-70"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg"
      >
        <h2
          class="MuiTypography-root makeStyles-ruleid-71 MuiTypography-h2"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineNone makeStyles-ruleidLink-72 makeStyles-avoid-74 MuiTypography-colorPrimary"
            href="/S1007"
          >
            S1007
          </a>
        </h2>
        <h4
          class="MuiTypography-root makeStyles-ruleid-71 MuiTypography-h4"
        />
        <div
          class="MuiTabs-root makeStyles-tabRoot-77"
        >
          <div
            class="MuiTabs-scrollable"
            style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
          />
          <div
            class="MuiTabs-scroller makeStyles-tabScroller-78 MuiTabs-scrollable"
            style="margin-bottom: 0px;"
          >
            <div
              class="MuiTabs-flexContainer"
              role="tablist"
            >
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-80 makeStyles-closedTab-84"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  cfamily
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="PrivateTabIndicator-root-89 PrivateTabIndicator-colorPrimary-90 MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd"
    >
      <h1>
        When the absolute positioning of bits representing a bit-field is required, then the behaviour and packing of bit-fields shall be documented
      </h1>
      <hr />
      <div
        class="MuiBox-root MuiBox-root-86 makeStyles-coverage-75"
      >
        <h2>
          Covered Since
        </h2>
        <ul>
          Not Covered
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-87 makeStyles-coverage-75"
      >
        <h2>
          Related Tickets and Pull Requests
        </h2>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://github.com/SonarSource/rspec/pulls?q=is%3Apr+\\"S1007\\"+OR+\\"RSPEC-1007\\""
          >
            Specification Pull Requests
          </a>
        </ul>
        <ul>
          <div>
            Select a language to see the implementation pull requests
          </div>
        </ul>
        <ul>
          <div>
            Select a language to see the implementation tickets
          </div>
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-88"
      >
        <span
          class="MuiTypography-root makeStyles-description-76 MuiTypography-body1"
        >
          <div>
            <div
              class="sect1"
            >
              

              <h2
                id="_description"
              >
                Description
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    Certain aspects of bit-fields are implementation-defined. In particular, the developer should be aware of the following:
                  </p>
                  

                </div>
                

                <div
                  class="ulist"
                >
                  

                  <ul>
                    

                    <li>
                      

                      <p>
                        It is implementation-defined whether the bit-fields are allocated from the high or low end of a storage unit (usually a byte).
                      </p>
                      

                    </li>
                    

                    <li>
                      

                      <p>
                        It is implementation-defined whether or not a bit field can overlap a storage unit boundary (e.g. if a 6-bit bit-field and a 4-bit bit-field are declared in that order, then the 4-bit bit-field may either start a new byte or it may use 2 bits in one byte and 2 bits in the next).
                      </p>
                      

                    </li>
                    

                  </ul>
                  

                </div>
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    These issues are generally benign (e.g. when packing together short-length data to save storage space), but they may lead to errors if the absolute position of the bit-fields is important (e.g. when accessing hardware registers).
                  </p>
                  

                </div>
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    Provided the elements of the structure are only accessed by name, the developer need make no assumptions about the way that the bit fields are stored within the structure.
                  </p>
                  

                </div>
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    Note that Rule 3-9-2 need not be followed when defining bit-fields, as their lengths are explicitly specified.
                  </p>
                  

                </div>
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    If the compiler has a switch to force bit fields to follow a particular layout, then this option should be documented.
                  </p>
                  

                </div>
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_see_also"
              >
                See Also
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="ulist"
                >
                  

                  <ul>
                    

                    <li>
                      

                      <p>
                        MISRA C++:2008, 3-9-2
                      </p>
                      

                    </li>
                    

                  </ul>
                  

                </div>
                

                <hr />
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_comments_and_links"
              >
                Comments And Links
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    (visible only on this page)
                  </p>
                  

                </div>
                

                <div
                  class="sect2"
                >
                  

                  <h3
                    id="_on_21_oct_2014_131509_samuel_mercier_wrote"
                  >
                    on 21 Oct 2014, 13:15:09 Samuel Mercier wrote:
                  </h3>
                  

                  <div
                    class="paragraph"
                  >
                    

                    <p>
                      Cannot be implemented, as this requires understanding of the developer’s intent.
                    </p>
                    

                  </div>
                  

                </div>
                

              </div>
              

            </div>
            <hr />
            <a
              href="https://github.com/SonarSource/rspec/blob/master/rules/S1007"
            >
              Edit on Github
            </a>
            <br />
            <hr />
            <pre>
              <code
                class="json hljs"
              >
                {
  
                <span
                  class="hljs-attr"
                >
                  "title"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "When the absolute positioning of bits representing a bit-field is required, then the behaviour and packing of bit-fields shall be documented"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "type"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "CODE_SMELL"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "closed"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "tags"
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  "misra"
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  "extra"
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  "replacementRules"
                </span>
                : [],
    
                <span
                  class="hljs-attr"
                >
                  "legacyKeys"
                </span>
                : []
  },
  
                <span
                  class="hljs-attr"
                >
                  "ruleSpecification"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "RSPEC-1007"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "sqKey"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "S1007"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "scope"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "Main"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "defaultQualityProfiles"
                </span>
                : [],
  
                <span
                  class="hljs-attr"
                >
                  "allKeys"
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  "S1007"
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  "branch"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "master"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "languagesSupport"
                </span>
                : [
    {
      
                <span
                  class="hljs-attr"
                >
                  "name"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "cfamily"
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "closed"
                </span>
                
    }
  ]
}
              </code>
            </pre>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders generic version of S3457 1`] = `
<DocumentFragment>
  <div>
    <div
      class="makeStyles-ruleBar-47"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg"
      >
        <h2
          class="MuiTypography-root makeStyles-ruleid-48 MuiTypography-h2"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineNone makeStyles-ruleidLink-49  MuiTypography-colorPrimary"
            href="/S3457"
          >
            S3457
          </a>
        </h2>
        <h4
          class="MuiTypography-root makeStyles-ruleid-48 MuiTypography-h4"
        />
        <div
          class="MuiTabs-root makeStyles-tabRoot-54"
        >
          <div
            class="MuiTabs-scrollable"
            style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
          />
          <div
            class="MuiTabs-scroller makeStyles-tabScroller-55 MuiTabs-scrollable"
            style="margin-bottom: 0px;"
          >
            <div
              class="MuiTabs-flexContainer"
              role="tablist"
            >
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-57 makeStyles-targetedTab-59"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  cfamily
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-57 makeStyles-coveredTab-58"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  csharp
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-57 makeStyles-closedTab-61"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  java
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-57 makeStyles-targetedTab-59"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  python
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="PrivateTabIndicator-root-66 PrivateTabIndicator-colorPrimary-67 MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd"
    >
      <h1>
        Composite format strings should be used correctly
      </h1>
      <hr />
      <div
        class="MuiBox-root MuiBox-root-63 makeStyles-coverage-52"
      >
        <h2>
          Covered Since
        </h2>
        <ul>
          <li>
            CSH: c#1
          </li>
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-64 makeStyles-coverage-52"
      >
        <h2>
          Related Tickets and Pull Requests
        </h2>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://github.com/SonarSource/rspec/pulls?q=is%3Apr+\\"S3457\\"+OR+\\"RSPEC-3457\\""
          >
            Specification Pull Requests
          </a>
        </ul>
        <ul>
          <div>
            Select a language to see the implementation pull requests
          </div>
        </ul>
        <ul>
          <div>
            Select a language to see the implementation tickets
          </div>
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-65"
      >
        <span
          class="MuiTypography-root makeStyles-description-53 MuiTypography-body1"
        >
          <div>
            <div
              class="sect1"
            >
              

              <h2
                id="_description"
              >
                Description
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    Because composite format strings are interpreted at runtime, rather than validated by the compiler, they can contain errors that lead to unexpected behaviors or runtime errors. This rule statically validates the good behavior of composite formats when calling the methods of 
                    <code>
                      String.Format
                    </code>
                    , 
                    <code>
                      StringBuilder.AppendFormat
                    </code>
                    , 
                    <code>
                      Console.Write
                    </code>
                    , 
                    <code>
                      Console.WriteLine
                    </code>
                    , 
                    <code>
                      TextWriter.Write
                    </code>
                    , 
                    <code>
                      TextWriter.WriteLine
                    </code>
                    , 
                    <code>
                      Debug.WriteLine(String, Object[])
                    </code>
                    , 
                    <code>
                      Trace.TraceError(String, Object[])
                    </code>
                    , 
                    <code>
                      Trace.TraceInformation(String, Object[])
                    </code>
                    , 
                    <code>
                      Trace.TraceWarning(String, Object[])
                    </code>
                     and 
                    <code>
                      TraceSource.TraceInformation(String, Object[])
                    </code>
                    .
                  </p>
                  

                </div>
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_noncompliant_code_example"
              >
                Noncompliant Code Example
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="listingblock"
                >
                  

                  <div
                    class="content"
                  >
                    

                    <pre
                      class="highlight"
                    >
                      <pre>
                        <code
                          class="cs hljs csharp"
                        >
                          s = 
                          <span
                            class="hljs-built_in"
                          >
                            string
                          </span>
                          .Format(
                          <span
                            class="hljs-string"
                          >
                            "{0}"
                          </span>
                          , arg0, arg1); 
                          <span
                            class="hljs-comment"
                          >
                            // Noncompliant, arg1 is declared but not used.
                          </span>
                          
s = 
                          <span
                            class="hljs-built_in"
                          >
                            string
                          </span>
                          .Format(
                          <span
                            class="hljs-string"
                          >
                            "{0} {2}"
                          </span>
                          , arg0, arg1, arg2); 
                          <span
                            class="hljs-comment"
                          >
                            // Noncompliant, the format item with index 1 is missing so arg1 will not be used.
                          </span>
                          
s = 
                          <span
                            class="hljs-built_in"
                          >
                            string
                          </span>
                          .Format(
                          <span
                            class="hljs-string"
                          >
                            "foo"
                          </span>
                          ); 
                          <span
                            class="hljs-comment"
                          >
                            // Noncompliant, there is no need to use string.Format here.
                          </span>
                        </code>
                      </pre>
                    </pre>
                    

                  </div>
                  

                </div>
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_compliant_solution"
              >
                Compliant Solution
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="listingblock"
                >
                  

                  <div
                    class="content"
                  >
                    

                    <pre
                      class="highlight"
                    >
                      <pre>
                        <code
                          class="cs hljs csharp"
                        >
                          s = 
                          <span
                            class="hljs-built_in"
                          >
                            string
                          </span>
                          .Format(
                          <span
                            class="hljs-string"
                          >
                            "{0}"
                          </span>
                          , arg0);
s = 
                          <span
                            class="hljs-built_in"
                          >
                            string
                          </span>
                          .Format(
                          <span
                            class="hljs-string"
                          >
                            "{0} {1}"
                          </span>
                          , arg0, arg2);
s = 
                          <span
                            class="hljs-string"
                          >
                            "foo"
                          </span>
                          ;
                        </code>
                      </pre>
                    </pre>
                    

                  </div>
                  

                </div>
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_exceptions"
              >
                Exceptions
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="ulist"
                >
                  

                  <ul>
                    

                    <li>
                      

                      <p>
                        No issue is raised if the format string is not a 
                        <code>
                          const
                        </code>
                        .
                      </p>
                      

                    </li>
                    

                  </ul>
                  

                </div>
                

                <div
                  class="listingblock"
                >
                  

                  <div
                    class="content"
                  >
                    

                    <pre>
                      var pattern = "{0} {1} {2}";
var res = string.Format(pattern, 1, 2); // Compliant, not const string are not recognized
                    </pre>
                    

                  </div>
                  

                </div>
                

                <div
                  class="ulist"
                >
                  

                  <ul>
                    

                    <li>
                      

                      <p>
                        No issue is raised if the argument is not an inline creation array.
                      </p>
                      

                    </li>
                    

                  </ul>
                  

                </div>
                

                <div
                  class="listingblock"
                >
                  

                  <div
                    class="content"
                  >
                    

                    <pre>
                      var array = new int[] {};
var res = string.Format("{0} {1}", array); // Compliant we don't know the size of the array
                    </pre>
                    

                  </div>
                  

                </div>
                

                <div
                  class="ulist"
                >
                  

                  <ul>
                    

                    <li>
                      

                      <p>
                        This rule doesn’t check whether the format specifier (defined after the 
                        <code>
                          :
                        </code>
                        ) is actually valid.
                      </p>
                      

                    </li>
                    

                  </ul>
                  

                </div>
                

                <hr />
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_implementation_specification"
              >
                Implementation Specification
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    (visible only on this page)
                  </p>
                  

                </div>
                

                <div
                  class="sect2"
                >
                  

                  <h3
                    id="_message"
                  >
                    Message
                  </h3>
                  

                  <div
                    class="paragraph"
                  >
                    

                    <p>
                      XXXX
                    </p>
                    

                  </div>
                  

                  <hr />
                  

                </div>
                

              </div>
              

            </div>
            

            <div
              class="sect1"
            >
              

              <h2
                id="_comments_and_links"
              >
                Comments And Links
              </h2>
              

              <div
                class="sectionbody"
              >
                

                <div
                  class="paragraph"
                >
                  

                  <p>
                    (visible only on this page)
                  </p>
                  

                </div>
                

                <div
                  class="sect2"
                >
                  

                  <h3
                    id="_is_duplicated_by_s3941"
                  >
                    is duplicated by: 
                    <a
                      class="rspec-auto-link"
                      data-rspec-id="S3941"
                      href="/rspec#/rspec/S3941"
                    >
                      S3941
                    </a>
                  </h3>
                  


                </div>
                

                <div
                  class="sect2"
                >
                  

                  <h3
                    id="_is_related_to_s2275"
                  >
                    is related to: 
                    <a
                      class="rspec-auto-link"
                      data-rspec-id="S2275"
                      href="/rspec#/rspec/S2275"
                    >
                      S2275
                    </a>
                  </h3>
                  


                </div>
                

                <div
                  class="sect2"
                >
                  

                  <h3
                    id="_on_10_dec_2015_090759_tamas_vajk_wrote"
                  >
                    on 10 Dec 2015, 09:07:59 Tamas Vajk wrote:
                  </h3>
                  

                  <div
                    class="paragraph"
                  >
                    

                    <p>
                      \\[~ann.campbell.2] Removed the performance label, as the performance impact is insignificant.
                    </p>
                    

                  </div>
                  

                </div>
                

                <div
                  class="sect2"
                >
                  

                  <h3
                    id="_on_10_dec_2015_144405_ann_campbell_wrote"
                  >
                    on 10 Dec 2015, 14:44:05 Ann Campbell wrote:
                  </h3>
                  

                  <div
                    class="paragraph"
                  >
                    

                    <p>
                      I’ve updated SQALE characteristic to match [~tamas.vajk]
                    </p>
                    

                  </div>
                  

                </div>
                

              </div>
              

            </div>
            <hr />
            <a
              href="https://github.com/SonarSource/rspec/blob/master/rules/S3457"
            >
              Edit on Github
            </a>
            <br />
            <hr />
            <pre>
              <code
                class="json hljs"
              >
                {
  
                <span
                  class="hljs-attr"
                >
                  "title"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "Composite format strings should be used correctly"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "type"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "CODE_SMELL"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "ready"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "remediation"
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  "func"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "Constant/Issue"
                </span>
                ,
    
                <span
                  class="hljs-attr"
                >
                  "constantCost"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "10min"
                </span>
                
  },
  
                <span
                  class="hljs-attr"
                >
                  "tags"
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  "confusing"
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  "defaultQualityProfiles"
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  "Sonar way"
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  "allKeys"
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  "S3457"
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  "branch"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "master"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "defaultSeverity"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "Major"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "extra"
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  "legacyKeys"
                </span>
                : [],
    
                <span
                  class="hljs-attr"
                >
                  "replacementRules"
                </span>
                : []
  },
  
                <span
                  class="hljs-attr"
                >
                  "quickfix"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "unknown"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "ruleSpecification"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "RSPEC-3457"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "sqKey"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "S3457"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "scope"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "All"
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  "languagesSupport"
                </span>
                : [
    {
      
                <span
                  class="hljs-attr"
                >
                  "name"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "cfamily"
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "ready"
                </span>
                
    },
    {
      
                <span
                  class="hljs-attr"
                >
                  "name"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "csharp"
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "ready"
                </span>
                
    },
    {
      
                <span
                  class="hljs-attr"
                >
                  "name"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "java"
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "closed"
                </span>
                
    },
    {
      
                <span
                  class="hljs-attr"
                >
                  "name"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "python"
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  "status"
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  "deprecated"
                </span>
                
    }
  ]
}
              </code>
            </pre>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
